# RagV3

./: Makefile  README.md  pyproject.toml
data/datasets/AnsweredQuestions/: dataset_code_public.json
data/output/search_results/: dataset_code_public.json  dataset_docs_public.json  my_resualt.json
data/output/search_results_and_answer/: dataset_docs_public.json
data/processed/: answer_cache.json  bm25_docs.pkl  chunks_docs.pkl
data1/output/search_results_and_answer/: dataset_code_public.json
data1/processed/: answer_cache.json
evaluations/retrieval/2026-06-25_12-50-48/search_results/: dataset_docs_private.json
evaluations/retrieval/2026-06-25_12-52-07/search_results/: dataset_code_private.json
src/: __main__.py  chunking.py  evaluation.py  generator.py  indexing.py  models.py
student/: __main__.py  chunking.py  evaluation.py  generator.py  indexing.py  models.py
