[project]
name = "rag-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.1",
    "nltk>=3.9.4",
    "pydantic>=2.13.4",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
]
